<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/tv_question_two"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:gravity="center"
		android:maxLines="2"
		android:text="@string/question_two"
		android:textColor="@color/black"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/radioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_question_two"
		android:orientation="vertical">

		<CheckBox
			android:id="@+id/cb_option_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ques2_label_1"
			android:textSize="20dp"
			android:layout_margin="10dp"/>

		<CheckBox
			android:id="@+id/cb_option_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ques2_label_2"
			android:textSize="20dp"
			android:layout_margin="10dp"/>

		<CheckBox
			android:id="@+id/cb_option_3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ques2_label_3"
			android:textSize="20dp"
			android:layout_margin="10dp"/>

		<CheckBox
			android:id="@+id/cb_option_4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ques2_label_4"
			android:textSize="20dp"
			android:layout_margin="10dp"/>
	</LinearLayout>

	<Button
		android:id="@+id/btn_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>
