<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<TextView
		android:id="@+id/tv_question_one"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:gravity="center"
		android:maxLines="2"
		android:text="Sample"
		android:textColor="@color/black"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<RadioGroup
		android:id="@+id/radioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:checkedButton="@+id/radio_button_1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_question_one">

		<RadioButton
			android:id="@+id/radio_button_1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/label_1" />

		<RadioButton
			android:id="@+id/radio_button_2"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/label_2" />

		<RadioButton
			android:id="@+id/radio_button_3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/label_3" />

		<RadioButton
			android:id="@+id/radio_button_4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/label_4" />
	</RadioGroup>

	<Button
		android:id="@+id/textButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>
